cmd/the/testdata/fixtures/invalid/syntax_errors.the
int y = $
#
*/

0x.ff
0xp1
1.1.12
"hello
world"
"\"
'\\\'
'd
d'
1g
'❌'
"""
'''

/*

Forgot to close this